...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/search_text"
                android:background="@color/white"
                android:hint="@string/enter_username"
                android:paddingLeft="@dimen/search_padding"
                android:layout_width="match_parent"
                android:layout_toLeftOf="@+id/btn_search"
                android:layout_height="match_parent" />

            <Button
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
...
