<resources>
    <string name="app_name">GithubDiscoveryApp</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="date_sample">May 12</string>
    <string name="description">Description</string>
    <string name="sample_language">Java</string>
    <string name="enter_username">enter username</string>
    <string name="no_previous_search_list">No previous searched username available</string>
    <string name="enter_user_name">Enter github username</string>
    <string name="searching">Searching...</string>
    <string name="view_on_github">View Repository on Github</string>
    <string name="issue_content">Issue Content</string>
</resources>
